# esame_lab_programmazione

./: CMakeLists.txt  Item.cpp  Item.h  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ItemTest.cpp  ShoppingListTest.cpp  UserTest.cpp  runAllTests.cpp
test/lib/googletest-main/googlemock/src/: gmock-spec-builders.cc  gmock_main.cc
test/lib/googletest-main/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test_.cc
test/lib/googletest-main/googletest/: README.md
test/lib/googletest-main/googletest/cmake/: internal_utils.cmake
test/lib/googletest-main/googletest/samples/: prime_tables.h
test/lib/googletest-main/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
test/lib/googletest-main/googletest/test/: googletest-death-test-test.cc  googletest-filepath-test.cc  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-listener-test.cc  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  gtest_help_test.py  gtest_stress_test.cc  gtest_unittest.cc  (+4 more)
(+15 files in other folders)
